@@ -7,7 +7,7 @@
 <title>chpst(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 chpst - runs a program with a changed process state 
@@ -142,7 +142,7 @@ package respectively.
 <h2><a name='sect6'>See Also</a></h2>
 <i>sv(8)</i>, <i>runsv(8)</i>, <i>setsid(2)</i>, <i>runit(8)</i>, <i>runit-init(8)</i>,
 <i>runsvdir(8)</i>, <i>runsvchdir(8)</i> <p>
- <i>http://smarden.org/runit/</i><br>
+ <i>https://smarden.org/runit/</i><br>
   <i>http://cr.yp.to/daemontools.html</i><br>
  
 <h2><a name='sect7'>Author</a></h2>
