@@ -4,7 +4,7 @@
 <title>runit -service dependencies</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">runit</a><br>
 <hr>
 <h1>runit - service dependencies</h1>
@@ -26,7 +26,7 @@ as follows:
 </ul>
 If you want to run service daemons that do not support service supervision
 as described above, please refer to
-<a href="http://smarden.org/pape/djb/daemontools/noinit.html">this page</a>
+<a href="https://smarden.org/pape/djb/daemontools/noinit.html">this page</a>
 about service dependencies I wrote some time ago.
 <hr>
 <address><a href="mailto:pape@smarden.org">
