@@ -4,7 +4,7 @@
 <title>runit - a UNIX init scheme with service supervision</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a>
+<a href="https://smarden.org/pape/">G. Pape</a>
 <hr>
 <h1>runit - a UNIX init scheme with service supervision</h1>
 <hr>
@@ -242,7 +242,7 @@ Here is an example:
                           `-tcpsvd---bincimap-up---bincimapd
 </pre>
 <hr>
-See <a href="http://smarden.org/runit/">http://smarden.org/runit/</a>
+See <a href="https://smarden.org/runit/">https://smarden.org/runit/</a>
 for recent informations.
 <hr>
 Related links:
