@@ -4,7 +4,7 @@
 <title>runit - installation</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">runit</a><br>
 <hr>
 <h1>runit - installation</h1>
@@ -47,7 +47,7 @@ To report success:
  # mail pape-runit-2.2.0@xxiv.smarden.org &lt;compile/sysdeps
 </pre>
 If you use <i>runit</i> regularly, please
-<a href="http://smarden.org/pape/#contribution">contribute</a> to the project.
+<a href="https://smarden.org/pape/#contribution">contribute</a> to the project.
 <p>
 Refer to <a href="replaceinit.html">replacing init</a> for
 replacing <i>init</i> with <i>runit</i>, or to
