@@ -4,7 +4,7 @@
 <title>runit - collection of run scripts</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">runit</a><br>
 <a href="replaceinit.html">How to replace init</a>
 <hr>
@@ -13,7 +13,7 @@
 This is a collection of <tt>run</tt> scripts for popular services to have
 them monitored by the
 <a href="http://cr.yp.to/daemontools.html">daemontools</a> or
-<a href="http://smarden.org/runit/">runit</a> package.
+<a href="https://smarden.org/runit/">runit</a> package.
 If you have additional run scripts or one of these run scripts works for you on
 an operating system not stated here, please
 <a href="mailto:supervision@list.skarnet.org">let me know</a>. 
@@ -349,7 +349,7 @@ This service needs a
 to be set up.
 <p>
 (<i>Linux</i>, running under
-<a href="http://smarden.org/ipsvd/tcpsvd.8.html">tcpsvd</a>)
+<a href="https://smarden.org/ipsvd/tcpsvd.8.html">tcpsvd</a>)
 <pre>
  #!/bin/sh
  exec 2&gt;&amp;1
