@@ -7,7 +7,7 @@
 <title>runsv(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 runsv - starts and monitors a service and optionally an appendant log
@@ -150,7 +150,7 @@ exits 111 on an error on startup or if another <b>runsv</b> is running in <i>ser
 <h2><a name='sect7'>See Also</a></h2>
 <i>sv(8)</i>, <i>chpst(8)</i>, <i>svlogd(8)</i>,
 <i>runit(8)</i>, <i>runit-init(8)</i>, <i>runsvdir(8)</i>, <i>runsvchdir(8)</i>, <i>utmpset(8)</i> <p>
-<i>http://smarden.org/runit/</i>
+<i>https://smarden.org/runit/</i>
 
 <h2><a name='sect8'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
