@@ -7,7 +7,7 @@
 <title>runsvchdir(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 runsvchdir - change services directory of <i>runsvdir(8)</i> 
@@ -33,7 +33,7 @@ error. <b>runsvchdir</b> exits 0 on success.
  
 <h2><a name='sect5'>See Also</a></h2>
 <i>runsvdir(8)</i>, <i>runit(8)</i>, <i>runit-init(8)</i>, <i>sv(8)</i>, <i>runsv(8)</i> <p>
-<i>http://smarden.org/runit/</i>
+<i>https://smarden.org/runit/</i>
 
 <h2><a name='sect6'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
