@@ -7,7 +7,7 @@
 <title>runsvdir(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 runsvdir - starts and monitors a collection of <i>runsv(8)</i> processes 
@@ -54,7 +54,7 @@ and then exits with 111.
 <h2><a name='sect5'>See Also</a></h2>
 <i>sv(8)</i>, <i>runsv(8)</i>, <i>runsvchdir(8)</i>, <i>runit(8)</i>,
 <i>runit-init(8)</i>, <i>chpst(8)</i>, <i>svlogd(8)</i>, <i>utmpset(8)</i>, <i>setsid(2)</i> <p>
-<i>http://smarden.org/runit/</i>
+<i>https://smarden.org/runit/</i>
 
 <h2><a name='sect6'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
