@@ -7,7 +7,7 @@
 <title>sv(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 sv - control and manage services monitored by <i><b>runsv</b>(8)</i> 
@@ -193,7 +193,7 @@ is down, and 4 if the status is unknown; it exits 2 on wrong usage, and
 <h2><a name='sect9'>See Also</a></h2>
 <i>runsv(8)</i>, <i>chpst(8)</i>, <i>svlogd(8)</i>, <i>runsvdir(8)</i>, <i>runsvchdir(8)</i>,
 <i>runit(8)</i>, <i>runit-init(8)</i> <p>
-<i>http://smarden.org/runit/</i> 
+<i>https://smarden.org/runit/</i>
 <h2><a name='sect10'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt;
 <p>
