@@ -7,7 +7,7 @@
 <title>svlogd(8) manual page</title>
 </head>
 <body bgcolor='white'>
-<a href='http://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
+<a href='https://smarden.org/pape/'>G. Pape</a><br><a href='index.html'>runit</A><hr><p>
 
 <h2><a name='sect0'>Name</a></h2>
 svlogd - runit&rsquo;s service logging daemon 
@@ -238,7 +238,7 @@ ALRM signal, it forces log file rotation for all <i>logs</i> with a non empty
 <h2><a name='sect10'>See Also</a></h2>
 <i>sv(8)</i>, <i>runsv(8)</i>, <i>chpst(8)</i>, <i>runit(8)</i>, <i>runit-init(8)</i>,
 <i>runsvdir(8)</i>, <i>runsvchdir(8)</i> <p>
-<i>http://smarden.org/runit/</i> 
+<i>https://smarden.org/runit/</i>
 <h2><a name='sect11'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt;
 <p>
