@@ -4,7 +4,7 @@
 <title>runit - upgrading from previous versions</title>
 </head>
 <body>
-<a href="http://smarden.org/pape/">G. Pape</a><br>
+<a href="https://smarden.org/pape/">G. Pape</a><br>
 <a href="index.html">runit</a><br>
 <hr>
 <h1>runit - upgrading from previous versions</h1>
