@@ -281,7 +281,7 @@ runit-init(8),
 runsvdir(8),
 runsvchdir(8)
 .P
- http://smarden.org/runit/
+ https://smarden.org/runit/
  http://cr.yp.to/daemontools.html
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
