@@ -58,6 +58,6 @@ chpst(8),
 utmpset(8),
 svlogd(8)
 .P
-http://smarden.org/runit/
+https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
