@@ -247,6 +247,6 @@ runsvdir(8),
 runsvchdir(8),
 utmpset(8)
 .P
-http://smarden.org/runit/
+https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
