@@ -50,6 +50,6 @@ runit-init(8),
 sv(8),
 runsv(8)
 .P
-http://smarden.org/runit/
+https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
