@@ -97,6 +97,6 @@ svlogd(8),
 utmpset(8),
 setsid(2)
 .P
-http://smarden.org/runit/
+https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
