@@ -280,6 +280,6 @@ runsvchdir(8),
 runit(8),
 runit-init(8)
 .P
-http://smarden.org/runit/
+https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
