@@ -459,6 +459,6 @@ runit-init(8),
 runsvdir(8),
 runsvchdir(8)
 .P
-http://smarden.org/runit/
+https://smarden.org/runit/
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
