@@ -1,3 +1,3 @@
 Copyright 2001-2024
 G. Pape
-http://smarden.org/runit/
+https://smarden.org/runit/
