@@ -1,3 +1,4 @@
+  * doc/*, man/*, package/README: switch all smarden.org http links to https.
   * utmpset.c: check length of line argument to match struct utmp; properly
     handle line argument with max length (thx github/Skyb0rg007).
   * doc/index.html: add reference to repository on github.com.
